Fixed alignment of columns in asset list

--- a/app/styles/etherwallet-custom.less
+++ b/app/styles/etherwallet-custom.less
@@ -188,6 +188,10 @@ p{
   text-overflow: ellipsis;
 }
 
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+  max-width: 300px !important;
+}
+
 
 .lock{
   width: 175px !important;
@@ -3852,7 +3856,15 @@ header.WEB {
   }
 }
 
+caption, th {
+  text-align: left;
+}
+
 .phishing {
   height: 60%;
   text-align: center;
+}
+
+th .text-right{
+  text-align: right !important;
 }
