--- a/app/styles/etherwallet-new.less
+++ b/app/styles/etherwallet-new.less
@@ -648,10 +648,6 @@ header.ETH .header-branding {
   border-radius:4px;
 }
 
-caption, th {
-  text-align: left !important;
-}
-
 .gen__3--inner {
   text-align: center;
   h1 {
